tests/urmoac/errors/net_issues/edge_length_0/d2r_output.urmoac
2000;10000;0.0;10.0;-200.0;0.0;-200.0;-10.0
2003;10000;0.0;10.0;100.0;0.0;100.0;-10.0
2001;10001;350.0;10.0;-100.0;0.0;-100.0;10.0
2002;10001;250.0;0.0;0.0;0.0;0.0;0.0
2004;10001;50.0;10.0;200.0;0.0;200.0;10.0
